# CaMa-Flood-GPU

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
CMF_GPU/: generate_parameters.ipynb  generate_parameters.py  main.py
CMF_GPU/phys/: AdaptTime.py  Inflow.py  Outflow.py  StepAdvance.py  Storage.py
CMF_GPU/utils/: Aggregator.py  Checker.py  Datadumper.py  Dataloader.py  Dataset.py  Logger.py  Parameter.py  Preprocesser.py  Preprocessor.py  Spliter.py  Variables.py  utils.py
cmfgpu/: __init__.py  utils.py
cmfgpu/aggregator/: __init__.py  aggregator.py  kernel_codegen.py  netcdf_io.py  statistics.py
cmfgpu/analysis/: __init__.py  bin_reader.py  gauge_reader.py  metrics.py  multirank_reader.py  topology_reader.py
cmfgpu/configs/: daily_bin_config.py  template_config.py  yearly_nc_config.py
cmfgpu/datasets/: __init__.py  abstract_dataset.py  abstract_gauge.py  csv_gauge.py  daily_bin_dataset.py  era5_land_dataset.py  exported_dataset.py  gauge_dataset.py  netcdf_dataset.py  netcdf_gauge.py  utils.py  yearly_nc_dataset.py
cmfgpu/models/: abstract_model.py  aggregator.py  cama_flood_model.py  utils.py
cmfgpu/modules/: __init__.py  abstract_module.py  base.py  (+5 more)
configs/: glb_01min.yaml  glb_03min.yaml  glb_06min.yaml  glb_15min.toml  glb_15min.yaml  glb_15min_gauge.yaml  test1-glb_15min.yaml  test4-e2o_glb_15min.yaml
scripts/: make_map_params.py  make_runoff_map.py  run_benchmark.py  run_daily_bin.py  run_era5.py  run_mix_runoff.py  run_netcdf.py  run_yearly_nc.py  update_dam_params.py  update_inflow_params.py  update_river_params.py
(+88 files in other folders)
